# GameEngine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp  Main.hpp
src/Collisions/: CMakeLists.txt  Collider.cpp  Collider.hpp  CollisionManager.cpp  CollisionManager.hpp  Hit.hpp
src/Core/: CMakeLists.txt  Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  FileManager.cpp  FileManager.hpp  Input.cpp  Input.hpp  MeshManager.cpp  MeshManager.hpp  ObjectsHandler.cpp  ObjectsHandler.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp  TimeHelper.cpp  TimeHelper.hpp  UpdateGroup.cpp  UpdateGroup.hpp  UpdateManager.cpp  UpdateManager.hpp  Window.cpp  Window.hpp
src/Graphics/: CMakeLists.txt  Color.cpp  Color.hpp  Font.cpp  Font.hpp  Frame.cpp  Frame.hpp  Material.cpp  Material.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  Uniform.cpp  Uniform.hpp  Vertex.cpp  Vertex.hpp
src/Graphics/Vulkan/: CMakeLists.txt  CommandBufferManager.cpp  CommandBufferManager.hpp  CommandPoolManager.cpp  CommandPoolManager.hpp  PipelineManager.cpp  PipelineManager.hpp  RenderPassManager.cpp  RenderPassManager.hpp  Vulkan.cpp  Vulkan.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDescriptor.cpp  VulkanDescriptor.hpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.hpp  VulkanDeviceManager.cpp  VulkanDeviceManager.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanOffScreenManager.cpp  VulkanOffScreenManager.hpp  VulkanOffScreenRenderer.cpp  VulkanOffScreenRenderer.hpp  VulkanPipeLine.cpp  VulkanPipeLine.hpp  VulkanQueueFamily.cpp  VulkanQueueFamily.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSemaphore.cpp  VulkanSemaphore.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanValidationLayer.cpp  VulkanValidationLayer.hpp
src/InterfaceObject/: CMakeLists.txt  InterfaceManager.cpp  InterfaceManager.hpp  InterfaceObject.cpp  InterfaceObject.hpp
src/InterfaceObject/CustomObjects/: Button.cpp  Button.hpp  (+3 more)
src/Math/: CMakeLists.txt  Math.cpp  Math.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Ray.cpp  Ray.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
src/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  MeshData.cpp  MeshData.hpp
src/Object/: CMakeLists.txt  Component.cpp  Component.hpp  LineDrawer.cpp  LineDrawer.hpp  Object.cpp  Object.hpp  RayDrawer.cpp  RayDrawer.hpp  Scene.cpp  Scene.hpp  Ship.cpp  Ship.hpp  Skybox.cpp  Skybox.hpp  SpaceObject.cpp  SpaceObject.hpp
src/OpenCL/: CMakeLists.txt  OpenCL.cpp  OpenCL.hpp
(+19 files in other folders)
